[package]
name = "comet"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mopa = "0.2"
libc = "0.2.98"
ahash = "0.7"
hashbrown = "0.11"
atomic = "0.5"
im = "15.0"
libmimalloc-sys = { features = ["extended"], version = "0.1" }
memx = "0.1"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
    "wincrypt",
] }

[features]
minimark-verbose = []
