[package]
name = "comet-multi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mopa = "0.2"
libc = "0.2.98"
ahash = "0.7"
hashbrown = "0.11"
atomic = "0.5"
parking_lot = "0.11"
rosalloc = { git = "https://github.com/playxe/rosalloc" }
#rosalloc = { path = "rosalloc" }
im = "15.0"
memx = "0.1"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
    "wincrypt",
] }

[features]
