[package]
name = "comet-api"
version = "0.1.0"
edition = "2018"
authors = ["Adel Prokurov <pr.adelprokurov@yandex.ru>"]
repository = "https://github.com/Starlight-JS/comet"
readme = "README.md"
keywords = ["memory", "gc", "automatic"]
license = "MIT"
description = "Wrapper over comet-gc to simplity usage"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mopa = "0.2"
comet-gc = { path = "../" }
